--- a/static/components/layout/style.css
+++ b/static/components/layout/style.css
@@ -5,7 +5,7 @@ body {
 
 .context__container, .stream__container {
     float: left;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .splash__container {
@@ -41,6 +41,7 @@ body {
     background-color: white;
     margin: 0 auto;
     height: 100vh;
+    overflow-y: scroll;
 }
 
 .controls__container {
@@ -86,10 +87,11 @@ body {
     .context__container {
         width: 100%;
         display: none;
+        position: absolute;
+        background-color: white;
     }
 
     .show {
-        background-color: yellow;
         display: block;
     }
 
